# iniparser

./: CMakeLists.txt  iniparser-config.cmake.in
src/: CMakeLists.txt
test/: CMakeLists.txt
